--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,14 @@ li {
     margin: .5em;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+a:hover {
+    color: grey;
+}
+
 blockquote p {
     font-style: italic;
 }
